hphp/hack/test/typecheck/infinite_loop_terminal_bad.php.exp
File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
Invalid return type (Typing[4110])
File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
This is void because this function implicitly returns void
File "infinite_loop_terminal_bad.php", line 3, characters 15-17:
It is incompatible with an int
